connect client to api and fixed NoImage not showing up when a pet has no images

--- a/src/scss/Frame.scss
+++ b/src/scss/Frame.scss
@@ -35,12 +35,12 @@
   position: fixed;
   height: 75%;
   transform-origin: top left;
-  animation: rotateAni .5s ease-out backwards;
-  -webkit-animation: rotateAni .5s ease-out backwards;
+  animation: rotateAni 0.5s ease-out backwards;
+  -webkit-animation: rotateAni 0.5s ease-out backwards;
   overflow: none;
 }
 
-#NoPetsFound{
+#NoPetsFound {
   font-weight: 600;
   font-size: 1.5em;
   border-radius: 5px;
@@ -49,26 +49,26 @@
   padding: 2rem 4rem;
   text-align: center;
 
-  a{
+  a {
     font-weight: 400;
-    font-size: .7em;
+    font-size: 0.7em;
   }
 }
 
 @keyframes rotateAni {
-  0% {  
-    transform: rotate(360deg) scale(0)  translateX(-10000px);
+  0% {
+    transform: rotate(360deg) scale(0) translateX(-10000px);
     opacity: 0;
   }
-  100% {  
-    transform: rotate(0deg) scale(1)  translateX(0px);
+  100% {
+    transform: rotate(0deg) scale(1) translateX(0px);
     opacity: 1;
   }
 }
 
 .frameContents {
   z-index: 1;
-  height: 100%;
+  min-height: 75vh;
   //width: 100%;
   background-color: white;
   border-radius: 4px;
@@ -84,8 +84,8 @@
   overflow-y: auto;
   cursor: pointer;
   margin: auto;
-  
-  ul{
+
+  ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -109,15 +109,15 @@
 // }
 
 .petImage::-webkit-scrollbar {
-  width: 5px;
+  width: 12px;
   border-radius: 5px;
 }
- 
+
 .petImage::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.199);
   border-radius: 5px;
 }
- 
+
 .petImage::-webkit-scrollbar-thumb {
   border-radius: 5px;
   background-color: rgba(165, 165, 165, 0.795);
@@ -192,11 +192,11 @@
     width: 18rem;
   }
   @keyframes rotateAni {
-    0% {  
+    0% {
       transform: translateX(-1000px);
       opacity: 0;
     }
-    100% {  
+    100% {
       transform: translateX(0px);
       opacity: 1;
     }
@@ -209,9 +209,6 @@
     width: 14rem;
   }
 
-
-
-  
   .petImage {
   }
 
@@ -223,17 +220,17 @@
 
   .profile {
     padding: 2px 10px;
-  
+
     h2 {
       font-size: 18px;
     }
-  
-    .desc {  
+
+    .desc {
       p {
         font-size: 12px;
       }
     }
-  
+
     .about {
     }
   }
